--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "极致的微前端框架",
   "private": true,
   "scripts": {
-    "start": "lerna run start --parallel",
+    "dev": "lerna run start --parallel",
     "doc": "lerna run docs:dev",
     "clean": "rimraf node_modules **/*/node_modules",
     "test": "lerna run test --scope wujie",
